--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -17,13 +17,21 @@
   line-height: 3rem;
 }
 
+.bl_blogDetail_snsLink_time {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+
+  .wp_social_bookmarking_light {
+    height: 20px;
+    padding: 0px !important;
+  }
+}
+
 .bl_blogDetail_time {
-  display: block;
-  margin-top: 36px;
   color: #1B224C;
   font-size: 1rem;
-  line-height: 1;
-  text-align: right;
+  line-height: 1.5;
 }
 
 .bl_blogDetail_content {
