--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -1,8 +1,16 @@
 .ly_content {
   padding: 60px 0 0;
-  .ly_inner {
-    display: flex;
-    justify-content: space-between;
+  @media screen and (min-width: 768px) {
+    .ly_inner {
+      display: flex;
+      justify-content: space-between;
+    }
+    .ly_main {
+      width: calc(100% - 298px);
+    }
+    .ly_sidebar {
+      width: 268px;
+    }
   }
 }
 
@@ -173,21 +181,12 @@
   text-decoration: underline;
 }
 
-.ly_main {
-  width: calc(100% - 298px);
-}
-
-.ly_sidebar {
-  width: 268px;
-}
-
 .bl_sidebar_title {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 268px;
+  width: 100%;
   height: 64px;
-  box-sizing: border-box; // TODO: 全体で対応後に削除
   background-color: #1B224C;
   border: 1px solid #707070;
 
