--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -130,20 +130,23 @@
 }
 .bl_recommended_item {
   display: flex;
-  gap: 0 32px;
+  justify-content: space-between;
   height: 128px;
 }
 .bl_recommended_item + .bl_recommended_item {
   margin-top: 28px;
 }
 .bl_recommended_item_img {
-  width: 210px;
+  width: 35%;
 }
 .bl_recommended_item_img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center center;
+}
+.bl_recommended_item_info {
+  width: 60%;
 }
 .bl_recommended_item_time {
   color: #1B224C;
@@ -181,11 +184,11 @@
 }
 .bl_sidebar_blogItem {
   display: flex;
-  gap: 0 16px;
+  justify-content: space-between;
   height: 70px;
 }
 .bl_sidebar_blogItem_img {
-  width: 110px;
+  width: 35%;
 }
 .bl_sidebar_blogItem_img img {
   width: 100%;
@@ -194,7 +197,7 @@
   object-position: center center;
 }
 .bl_sidebar_blogItem_info {
-  width: 152px;
+  width: 60%;
 }
 .bl_sidebar_blogItem_title {
   color: #1B224C;
@@ -205,6 +208,7 @@
 }
 .ly_sidebar_category {
   margin-top: 48px;
+  padding: 0 0 60px;
 }
 .bl_sidebar_category_listItems {
   margin-top: 30px;
