--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -148,7 +148,7 @@
 
 .bl_recommended_item {
   display: flex;
-  gap: 0 32px;
+  justify-content: space-between;
   height: 128px;
 }
 
@@ -157,13 +157,17 @@
 }
 
 .bl_recommended_item_img {
-  width: 210px;
+  width: 35%;
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center center;
   }
+}
+
+.bl_recommended_item_info {
+  width: 60%;
 }
 
 .bl_recommended_item_time {
@@ -207,12 +211,12 @@
 
 .bl_sidebar_blogItem {
   display: flex;
-  gap: 0 16px;
+  justify-content: space-between;
   height: 70px;
 }
 
 .bl_sidebar_blogItem_img {
-  width: 110px;
+  width: 35%;
   img {
     width: 100%;
     height: 100%;
@@ -222,7 +226,7 @@
 }
 
 .bl_sidebar_blogItem_info {
-  width: 152px;
+  width: 60%;
 }
 
 .bl_sidebar_blogItem_title {
@@ -235,6 +239,7 @@
 
 .ly_sidebar_category {
   margin-top: 48px;
+  padding: 0 0 60px;
 }
 
 .bl_sidebar_category_listItems {
