--- a/app/public/wp-content/themes/engress/css/archive.css
+++ b/app/public/wp-content/themes/engress/css/archive.css
@@ -25,7 +25,7 @@
 }
 .bl_newBlog_item {
   display: flex;
-  gap: 0 48px;
+  justify-content: space-between;
   height: 148px;
 }
 .bl_newBlog_item:hover {
@@ -33,15 +33,22 @@
 }
 .bl_newBlog_item_img {
   width: 30%;
-  max-width: 240px;
 }
 .bl_newBlog_item_img img {
   width: 100%;
   height: 100%;
 }
-@media screen and (max-width: 599px) {
+@media screen and (max-width: 767px) {
   .bl_newBlog_item_img {
-    width: 45%;
+    width: 42%;
+  }
+}
+.bl_newBlog_item_info {
+  width: 65%;
+}
+@media screen and (max-width: 767px) {
+  .bl_newBlog_item_info {
+    width: 55%;
   }
 }
 .bl_newBlog_item_info_time {
@@ -54,9 +61,14 @@
   margin-top: 12px;
   color: #1B224C;
   font-weight: bold;
-  font-size: 28px;
+  font-size: 1.75rem;
   line-height: 1.5;
   text-decoration: underline;
+}
+@media screen and (max-width: 767px) {
+  .bl_newBlog_item_info_title {
+    font-size: 1rem;
+  }
 }
 .bl_newBlog_item_info_text {
   margin-top: 8px;
