feat: ブログ一覧/ブログ詳細の「おすすめの記事」にカテゴリーを追加

--- a/app/public/wp-content/themes/engress/css/archive.css
+++ b/app/public/wp-content/themes/engress/css/archive.css
@@ -26,6 +26,7 @@
 .bl_newBlog_item {
   display: flex;
   justify-content: space-between;
+  position: relative;
   height: 148px;
 }
 .bl_newBlog_item:hover {
