--- a/app/public/wp-content/themes/engress/css/archive.scss
+++ b/app/public/wp-content/themes/engress/css/archive.scss
@@ -31,6 +31,7 @@
 .bl_newBlog_item {
   display: flex;
   justify-content: space-between;
+  position: relative;
   height: 148px;
   &:hover {
     opacity: .7;
