--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -131,6 +131,7 @@
 .bl_recommended_item {
   display: flex;
   justify-content: space-between;
+  position: relative;
   height: 128px;
 }
 .bl_recommended_item + .bl_recommended_item {
