--- a/app/public/wp-content/themes/engress/css/style.scss
+++ b/app/public/wp-content/themes/engress/css/style.scss
@@ -188,3 +188,18 @@ h1, h2, h3, p, figure, ul {
   font-size: 2rem;
   line-height: 1.5;
 }
+
+.el_blogCategory {
+  position: absolute;
+  width: 80px;
+  height: 28px;
+  padding: 8px 8px;
+  overflow: hidden;
+  background-color: #1B224C;
+  color: #FFFFFF;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 1;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
