feat: ブログ一覧の画像が拡大されるように対応

--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -151,6 +151,7 @@ h1, h2, h3, p, figure, ul {
 }
 .el_blogCategory {
   position: absolute;
+  z-index: 1;
   width: 80px;
   height: 28px;
   padding: 8px 8px;
