--- a/app/public/wp-content/themes/engress/css/archive.css
+++ b/app/public/wp-content/themes/engress/css/archive.css
@@ -28,16 +28,22 @@
   justify-content: space-between;
   position: relative;
   height: 148px;
+  transition: 0.3s;
 }
 .bl_newBlog_item:hover {
-  opacity: 0.7;
+  opacity: 0.4;
+}
+.bl_newBlog_item:hover .bl_newBlog_item_img img {
+  transform: scale(1.2);
 }
 .bl_newBlog_item_img {
   width: 30%;
+  overflow: hidden;
 }
 .bl_newBlog_item_img img {
   width: 100%;
   height: 100%;
+  transition: 0.3s;
 }
 @media screen and (max-width: 767px) {
   .bl_newBlog_item_img {
