--- a/app/public/wp-content/themes/engress/css/archive.scss
+++ b/app/public/wp-content/themes/engress/css/archive.scss
@@ -33,16 +33,25 @@
   justify-content: space-between;
   position: relative;
   height: 148px;
+  transition: 0.3s;
   &:hover {
-    opacity: .7;
+    opacity: 0.4;
+
+    .bl_newBlog_item_img {
+      img {
+        transform: scale(1.2);
+      }
+    }
   }
 }
 
 .bl_newBlog_item_img {
   width: 30%;
+  overflow: hidden;
   img {
     width: 100%;
     height: 100%;
+    transition: 0.3s;
   }
   @media screen and (max-width: 767px) {
     width: 42%;
