--- a/app/public/wp-content/themes/engress/css/front-page.css
+++ b/app/public/wp-content/themes/engress/css/front-page.css
@@ -455,18 +455,24 @@
   position: relative;
   width: 430px;
   height: 110px;
+  transition: 0.3s;
 }
 .bl_blog_items .bl_blog_item:hover {
-  opacity: 0.7;
+  opacity: 0.4;
+}
+.bl_blog_items .bl_blog_item:hover .bl_blog_img img {
+  transform: scale(1.2);
 }
 .bl_blog_items .bl_blog_item .bl_blog_img {
   width: 150px;
   height: 110px;
   margin: 0;
+  overflow: hidden;
 }
 .bl_blog_items .bl_blog_item .bl_blog_img img {
   width: 100%;
   height: 100%;
+  transition: 0.3s;
 }
 .bl_blog_items .bl_blog_item .bl_blog_info {
   display: flex;
