--- a/app/public/wp-content/themes/engress/css/front-page.scss
+++ b/app/public/wp-content/themes/engress/css/front-page.scss
@@ -509,17 +509,25 @@
     position: relative; 
     width: 430px;
     height: 110px;
+    transition: 0.3s;
     &:hover {
-      opacity: .7;
+      opacity: 0.4;
+      .bl_blog_img {
+        img {
+          transform: scale(1.2);
+        }
+      }
     }
 
     .bl_blog_img {
       width: 150px;
       height: 110px;
       margin: 0; // figureタグのmarginを打ち消す
+      overflow: hidden;
       img {
         width: 100%;
         height: 100%;
+        transition: 0.3s;
       }
     }
 
