--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -133,18 +133,27 @@
   justify-content: space-between;
   position: relative;
   height: 128px;
+  transition: 0.3s;
+}
+.bl_recommended_item:hover {
+  opacity: 0.4;
+}
+.bl_recommended_item:hover .bl_recommended_item_img img {
+  transform: scale(1.2);
 }
 .bl_recommended_item + .bl_recommended_item {
   margin-top: 28px;
 }
 .bl_recommended_item_img {
   width: 35%;
+  overflow: hidden;
 }
 .bl_recommended_item_img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center center;
+  transition: 0.3s;
 }
 .bl_recommended_item_info {
   width: 60%;
