--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -196,15 +196,24 @@
   display: flex;
   justify-content: space-between;
   height: 70px;
+  transition: 0.3s;
+}
+.bl_sidebar_blogItem:hover {
+  opacity: 0.4;
+}
+.bl_sidebar_blogItem:hover .bl_sidebar_blogItem_img img {
+  transform: scale(1.2);
 }
 .bl_sidebar_blogItem_img {
   width: 35%;
+  overflow: hidden;
 }
 .bl_sidebar_blogItem_img img {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center center;
+  transition: 0.3s;
 }
 .bl_sidebar_blogItem_info {
   width: 60%;
