--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -225,15 +225,26 @@
   display: flex;
   justify-content: space-between;
   height: 70px;
+  transition: 0.3s;
+  &:hover {
+    opacity: 0.4;
+    .bl_sidebar_blogItem_img {
+      img {
+        transform: scale(1.2);
+      }
+    }
+  }
 }
 
 .bl_sidebar_blogItem_img {
   width: 35%;
+  overflow: hidden;
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     object-position: center center;
+    transition: 0.3s;
   }
 }
 
