--- a/app/public/wp-content/themes/engress/css/front-page.css
+++ b/app/public/wp-content/themes/engress/css/front-page.css
@@ -451,9 +451,8 @@
 }
 .bl_blog_items .bl_blog_item {
   display: flex;
-  gap: 0 20px;
   position: relative;
-  width: 430px;
+  width: 100%;
   height: 110px;
   transition: 0.3s;
 }
@@ -464,7 +463,7 @@
   transform: scale(1.2);
 }
 .bl_blog_items .bl_blog_item .bl_blog_img {
-  width: 150px;
+  width: 35%;
   height: 110px;
   margin: 0;
   overflow: hidden;
@@ -478,6 +477,8 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 65%;
+  padding-left: 20px;
 }
 .bl_blog_items .bl_blog_item .bl_blog_info .bl_blog_info_title {
   color: #1B224C;
