--- a/app/public/wp-content/themes/engress/css/front-page.scss
+++ b/app/public/wp-content/themes/engress/css/front-page.scss
@@ -505,9 +505,8 @@
 
   .bl_blog_item {
     display: flex;
-    gap: 0 20px;
     position: relative; 
-    width: 430px;
+    width: 100%;
     height: 110px;
     transition: 0.3s;
     &:hover {
@@ -520,7 +519,7 @@
     }
 
     .bl_blog_img {
-      width: 150px;
+      width: 35%;
       height: 110px;
       margin: 0; // figureタグのmarginを打ち消す
       overflow: hidden;
@@ -535,6 +534,8 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      width: 65%;
+      padding-left: 20px;
 
       .bl_blog_info_title {
         color: #1B224C;
