--- a/app/public/wp-content/themes/engress/css/price.scss
+++ b/app/public/wp-content/themes/engress/css/price.scss
@@ -8,6 +8,48 @@
 }
 
 .ly_system {
+  padding: 60px 0 90px;
+}
+
+.bl_price_title {
+  color: #1B224C;
+  font-weight: bold;
+  font-size: 2rem;
+  line-height: 1;
+  text-align: center;
+}
+
+.bl_system_items {
+  display: flex;
+  justify-content: center;
+  gap: 0 96px;
+  height: 90px;
+  margin-top: 60px;
+  @media screen and (max-width: 767px) {
+    gap: 0 48px;
+  }
+  @media screen and (max-width: 499px) {
+    height: 60px;
+  }
+}
+
+.bl_system_item {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 280px;
+  height: 100%;
+  background-color: #1B224C;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 1.25rem;
+  line-height: 1;
+  @media screen and (max-width: 767px) {
+    font-size: 1rem;
+  }
+  @media screen and (max-width: 499px) {
+    font-size: 0.75rem;
+  }
 }
 
 .ly_plan {
