--- a/app/public/wp-content/themes/engress/css/price.css
+++ b/app/public/wp-content/themes/engress/css/price.css
@@ -19,14 +19,8 @@
 .bl_system_items {
   display: flex;
   justify-content: center;
-  gap: 0 96px;
   height: 90px;
   margin-top: 60px;
-}
-@media screen and (max-width: 767px) {
-  .bl_system_items {
-    gap: 0 48px;
-  }
 }
 @media screen and (max-width: 499px) {
   .bl_system_items {
@@ -53,6 +47,22 @@
 @media screen and (max-width: 499px) {
   .bl_system_item {
     font-size: 0.75rem;
+  }
+}
+.bl_system_plus {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 96px;
+  height: 100%;
+  color: #1B224C;
+  font-size: 28px;
+  line-height: 1;
+}
+@media screen and (max-width: 767px) {
+  .bl_system_plus {
+    width: 48px;
+    font-size: 16px;
   }
 }
 /*# sourceMappingURL=price.css.map */
