--- a/app/public/wp-content/themes/engress/css/price.scss
+++ b/app/public/wp-content/themes/engress/css/price.scss
@@ -22,12 +22,8 @@
 .bl_system_items {
   display: flex;
   justify-content: center;
-  gap: 0 96px;
   height: 90px;
   margin-top: 60px;
-  @media screen and (max-width: 767px) {
-    gap: 0 48px;
-  }
   @media screen and (max-width: 499px) {
     height: 60px;
   }
@@ -49,6 +45,21 @@
   }
   @media screen and (max-width: 499px) {
     font-size: 0.75rem;
+  }
+}
+
+.bl_system_plus {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  width: 96px;
+  height: 100%;
+  color: #1B224C;
+  font-size: 28px;
+  line-height: 1;
+  @media screen and (max-width: 767px) {
+    width: 48px;
+    font-size: 16px;
   }
 }
 
