--- a/app/public/wp-content/themes/engress/css/price.scss
+++ b/app/public/wp-content/themes/engress/css/price.scss
@@ -64,4 +64,29 @@
 }
 
 .ly_plan {
+  padding: 0 0 60px;
+}
+
+.bl_plans {
+  display: flex;
+  gap: 0 8px;
+  margin-top: 60px;
+}
+
+.bl_plan {
+  width: 100%;
+  height: 474px;
+  border: 0.5px solid #1B224C;
+}
+
+.bl_plan_title {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  background-color: #1B224C;
+  color: #FFFFFF;
+  font-weight: bold;
+  font-size: 1rem;
+  line-height: 1;
 }
