--- a/app/public/wp-content/themes/engress/css/price.css
+++ b/app/public/wp-content/themes/engress/css/price.css
@@ -65,6 +65,13 @@
     font-size: 16px;
   }
 }
+.bl_system_description {
+  margin-top: 40px;
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.75;
+}
 .ly_plan {
   padding: 0 0 60px;
 }
