--- a/app/public/wp-content/themes/engress/css/price.scss
+++ b/app/public/wp-content/themes/engress/css/price.scss
@@ -98,3 +98,21 @@
   font-size: 1rem;
   line-height: 1;
 }
+
+.bl_plan_price {
+  margin-top: 32px;
+  color: #1B224C;
+  font-weight: bold;
+  font-size: 24px;
+  line-height: 1;
+  text-align: center;
+}
+
+.bl_plan_remark {
+  margin-top: 16px;
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1;
+  text-align: center;
+}
