--- a/app/public/wp-content/themes/engress/css/price.scss
+++ b/app/public/wp-content/themes/engress/css/price.scss
@@ -75,6 +75,10 @@
   padding: 0 0 60px;
 }
 
+.bl_plans_wrapper {
+  overflow-x: auto;
+}
+
 .bl_plans {
   display: flex;
   gap: 0 8px;
@@ -84,6 +88,9 @@
 
 .bl_plan {
   width: 100%;
+  @media screen and (max-width: 767px) {
+    min-width: 220px;
+  }
 }
 
 // .bl_より.el_の方が適切？
@@ -106,7 +113,7 @@
 }
 
 .bl_plan_body {
-  height: 414px;
+  min-height: 414px;
   padding: 32px 20px 20px;
   border-right: 0.5px solid #1B224C;
   border-bottom: 0.5px solid #1B224C;
