--- a/app/public/wp-content/themes/engress/css/contact.scss
+++ b/app/public/wp-content/themes/engress/css/contact.scss
@@ -1,3 +1,8 @@
-.contact-test {
-  color: blue;
+.ly_contactFv {
+  padding: 88px 0;
+  background-image: url('../img/cta.png');
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  text-align: center;
 }
