--- a/app/public/wp-content/themes/engress/css/contact.scss
+++ b/app/public/wp-content/themes/engress/css/contact.scss
@@ -6,3 +6,29 @@
   background-repeat: no-repeat;
   text-align: center;
 }
+
+.ly_contact {
+  padding: 54px 0 82px;
+}
+
+.bl_contact_description {
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.bl_contact_items {
+  margin-top: 36px;
+}
+
+.bl_contact_item + .bl_contact_item {
+  margin-top: 20px;
+}
+
+.bl_contact_item_text {
+  width: 100%;
+  height: 50px;
+  padding: 19px 20px;
+  border: 0.5px solid #1B224C;
+}
