feat: お問い合わせの項目を追加

--- a/app/public/wp-content/themes/engress/css/contact.scss
+++ b/app/public/wp-content/themes/engress/css/contact.scss
@@ -19,16 +19,39 @@
 }
 
 .bl_contact_items {
-  margin-top: 36px;
+  margin-top: 32px;
 }
 
 .bl_contact_item + .bl_contact_item {
-  margin-top: 20px;
+  margin-top: 16px;
 }
 
-.bl_contact_item_text {
+.el_contact_item_name {
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.el_contact_item_text {
+  margin-top: 8px;
   width: 100%;
   height: 50px;
   padding: 19px 20px;
   border: 0.5px solid #1B224C;
+  &.el_contact_item_text__content {
+    height: 240px;
+    resize: none;
+  }
+  &::placeholder {
+    color: #B4B4B4;
+  }
+}
+
+.bl_contact_purpose {
+  margin-top: 20px;
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
 }
