--- a/app/public/wp-content/themes/engress/css/style.css
+++ b/app/public/wp-content/themes/engress/css/style.css
@@ -164,4 +164,7 @@ h1, h2, h3, p, figure, ul {
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+.hp_bold {
+  font-weight: bold;
+}
 /*# sourceMappingURL=style.css.map */
