--- a/app/public/wp-content/themes/engress/css/contact.scss
+++ b/app/public/wp-content/themes/engress/css/contact.scss
@@ -55,3 +55,35 @@
   font-size: 16px;
   line-height: 1.5;
 }
+
+.bl_contact_purpose_selects {
+  margin-top: 12px;
+}
+
+.bl_contact_purpose_select {
+  position: relative;
+}
+
+.bl_contact_purpose_select + .bl_contact_purpose_select {
+  margin-top: 10px;
+}
+
+.bl_contact_purpose_select_radio {
+  position: absolute;
+  top: 2px;
+  left: 0px;
+  width: 20px;
+  height: 20px;
+}
+
+.bl_contact_purpose_select_text {
+  margin-left: 39px;
+  color: #1B224C;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+}
+
+.bl_contact_content {
+  margin-top: 16px;
+}
