--- a/app/public/wp-content/themes/engress/css/contact.scss
+++ b/app/public/wp-content/themes/engress/css/contact.scss
@@ -93,6 +93,16 @@
   text-align: center;
 }
 
+.bl_contact_privacyPolicy_link {
+  color: #F5A623;
+  font-weight: 500;
+  font-size: 16px;
+  text-decoration: underline;
+  &:hover {
+    opacity: 0.7;
+  }
+}
+
 .bl_contact_privacyPolicy_text {
   color: #1B224C;
   font-weight: 500;
