--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -242,6 +242,7 @@
   font-size: 12px;
   line-height: 2;
   text-decoration: underline;
+  word-wrap: break-word;
 }
 .ly_sidebar_category {
   margin-top: 48px;
