--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -188,6 +188,7 @@
   font-size: 1.25rem;
   line-height: 1.5;
   text-decoration: underline;
+  word-break: break-all;
 }
 .bl_sidebar_title {
   display: inline-flex;
@@ -262,6 +263,7 @@
   font-weight: bold;
   font-size: 16px;
   line-height: 1;
+  word-break: break-all;
 }
 .bl_sidebar_category_link::before {
   color: #1B224C;
