--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -132,6 +132,13 @@
     }
   }
 
+  figcaption {
+    font-size: 85%;
+    color: #949494;
+    text-align: center;
+    font-style: italic;
+  }
+
   img {
     width: auto;
     height: auto;
