--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -108,6 +108,7 @@
   content: '';
 }
 .bl_blogDetail_content figure {
+  max-width: 100%;
   margin: 24px 0;
 }
 .bl_blogDetail_content figure.aligncenter {
@@ -124,6 +125,7 @@
 }
 .bl_blogDetail_content img {
   width: auto;
+  max-width: 100%;
   height: auto;
 }
 .bl_blogDetail_content blockquote {
