--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -123,6 +123,7 @@
   }
 
   figure {
+    max-width: 100%;
     margin: 24px 0;
     &.aligncenter {
       margin: 24px auto;
@@ -141,6 +142,7 @@
 
   img {
     width: auto;
+    max-width: 100%;
     height: auto;
   }
 
