feat: ブログ詳細画面でアイキャッチ画像を表示

--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -43,6 +43,11 @@
   line-height: 1.5;
 }
 
+.bl_blogDetail_catchImg {
+  padding: 30px 20px;
+  text-align: center;
+}
+
 .bl_blogDetail_content {
   h1 {
     margin: 24px 0;
