--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -38,6 +38,10 @@
   font-size: 1rem;
   line-height: 1.5;
 }
+.bl_blogDetail_catchImg {
+  padding: 30px 20px;
+  text-align: center;
+}
 .bl_blogDetail_content h1 {
   margin: 24px 0;
   color: #1B224C;
