fix: アイキャッチ画像の横幅が大きい場合の修正

--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -44,8 +44,13 @@
 }
 
 .bl_blogDetail_catchImg {
+  max-width: 100%;
   padding: 30px 20px;
   text-align: center;
+  img {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 .bl_blogDetail_content {
