--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -39,8 +39,13 @@
   line-height: 1.5;
 }
 .bl_blogDetail_catchImg {
+  max-width: 100%;
   padding: 30px 20px;
   text-align: center;
+}
+.bl_blogDetail_catchImg img {
+  max-width: 100%;
+  height: auto;
 }
 .bl_blogDetail_content h1 {
   margin: 24px 0;
