fix: ブログ一覧で本文の英単語が折り返されるように修正

--- a/app/public/wp-content/themes/engress/css/archive.css
+++ b/app/public/wp-content/themes/engress/css/archive.css
@@ -83,5 +83,6 @@
   font-weight: 500;
   font-size: 1rem;
   line-height: 1.5;
+  word-wrap: break-word;
 }
 /*# sourceMappingURL=archive.css.map */
