--- a/app/public/wp-content/themes/engress/css/archive.scss
+++ b/app/public/wp-content/themes/engress/css/archive.scss
@@ -80,15 +80,19 @@
   line-height: 1.5;
   text-decoration: underline;
   @media screen and (max-width: 767px) {
+    margin-top: 8px;
     font-size: 1rem;
   }
 }
 
 .bl_newBlog_item_info_text {
-  margin-top: 8px;
+  margin-top: 4px;
   color: #1B224C;
   font-weight: 500;
   font-size: 1rem;
   line-height: 1.5;
   word-wrap: break-word;
+  @media screen and (max-width: 767px) {
+    font-size: 0.75rem;
+  }
 }
