fix: SP表示でブログ一覧のページングを修正

--- a/app/public/wp-content/themes/engress/css/pagination.css
+++ b/app/public/wp-content/themes/engress/css/pagination.css
@@ -5,13 +5,20 @@
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  width: 48px;
-  height: 48px;
+  width: 32px;
+  height: 32px;
   border: 1px solid #1B224C;
   color: #1B224C;
   font-weight: bold;
-  font-size: 1rem;
+  font-size: 0.75rem;
   line-height: 1;
+}
+@media screen and (min-width: 600px) {
+  .bl_pagination .page-numbers {
+    width: 48px;
+    height: 48px;
+    font-size: 1rem;
+  }
 }
 .bl_pagination .page-numbers.current {
   background-color: #1B224C;
@@ -20,7 +27,9 @@
 .bl_pagination .page-numbers.dots {
   border: none;
 }
-.bl_pagination .page-numbers + .page-numbers {
-  margin-left: 20px;
+@media screen and (min-width: 600px) {
+  .bl_pagination .page-numbers + .page-numbers {
+    margin-left: 20px;
+  }
 }
 /*# sourceMappingURL=pagination.css.map */
