--- a/app/public/wp-content/themes/engress/css/pagination.scss
+++ b/app/public/wp-content/themes/engress/css/pagination.scss
@@ -1,3 +1,6 @@
+// ブレイクポイントを600pxに設定した理由
+// https://crestadesign.org/responsive/
+
 .bl_pagination {
   text-align: center;
 
@@ -5,13 +8,19 @@
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 48px;
-    height: 48px;
+    width: 32px;
+    height: 32px;
     border: 1px solid #1B224C;
     color: #1B224C;
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 0.75rem;
     line-height: 1;
+
+    @media screen and (min-width: 600px) {
+      width: 48px;
+      height: 48px;
+      font-size: 1rem;
+    }
 
     &.current {
       background-color: #1B224C;
@@ -24,6 +33,8 @@
   }
 
   .page-numbers + .page-numbers {
-    margin-left: 20px;
+    @media screen and (min-width: 600px) {
+      margin-left: 20px;
+    }
   }
 }
