--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -107,9 +107,8 @@
 .bl_blogDetail_content ul li::before {
   display: inline-block;
   position: absolute;
-  top: 50%;
+  top: 4px;
   left: -32px;
-  transform: translateY(-50%);
   width: 11px;
   height: 11px;
   border-radius: 50%;
