--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -120,9 +120,8 @@
       &::before {
         display:  inline-block;
         position: absolute;
-        top: 50%;
+        top: 4px;
         left: -32px;
-        transform: translateY(-50%);
         width:  11px;
         height:  11px;
         border-radius: 50%;
