fix: SP表示の場合、トップページのブログの高さを変更

--- a/app/public/wp-content/themes/engress/css/front-page.css
+++ b/app/public/wp-content/themes/engress/css/front-page.css
@@ -457,6 +457,11 @@
   height: 110px;
   transition: 0.3s;
 }
+@media screen and (max-width: 767px) {
+  .bl_blog_items .bl_blog_item {
+    height: 80px;
+  }
+}
 .bl_blog_items .bl_blog_item:hover {
   opacity: 0.4;
 }
@@ -465,7 +470,6 @@
 }
 .bl_blog_items .bl_blog_item .bl_blog_img {
   width: 35%;
-  height: 110px;
   margin: 0;
   overflow: hidden;
 }
