--- a/app/public/wp-content/themes/engress/css/front-page.scss
+++ b/app/public/wp-content/themes/engress/css/front-page.scss
@@ -510,6 +510,9 @@
     width: 100%;
     height: 110px;
     transition: 0.3s;
+    @media screen and (max-width: 767px) {
+      height: 80px;
+    }
     &:hover {
       opacity: 0.4;
       .bl_blog_img {
@@ -521,7 +524,6 @@
 
     .bl_blog_img {
       width: 35%;
-      height: 110px;
       margin: 0; // figureタグのmarginを打ち消す
       overflow: hidden;
       img {
