--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -191,6 +191,11 @@
   height: 128px;
   transition: 0.3s;
 }
+@media screen and (max-width: 767px) {
+  .bl_recommended_item {
+    height: 80px;
+  }
+}
 .bl_recommended_item:hover {
   opacity: 0.4;
 }
@@ -227,6 +232,12 @@
   line-height: 1.5;
   text-decoration: underline;
   word-break: break-all;
+}
+@media screen and (max-width: 767px) {
+  .bl_recommended_item_title {
+    margin-top: 12px;
+    font-size: 1rem;
+  }
 }
 .bl_sidebar_title {
   display: inline-flex;
