--- a/app/public/wp-content/themes/engress/css/archive.scss
+++ b/app/public/wp-content/themes/engress/css/archive.scss
@@ -26,6 +26,9 @@
 
 .bl_newBlog_item + .bl_newBlog_item {
   margin-top: 92px;
+  @media screen and (max-width: 767px) {
+    margin-top: 40px;
+  }
 }
 
 .bl_newBlog_item {
@@ -34,6 +37,10 @@
   position: relative;
   height: 148px;
   transition: 0.3s;
+  @media screen and (max-width: 767px) {
+    height: 100px;
+  }
+
   &:hover {
     opacity: 0.4;
 
@@ -93,6 +100,6 @@
   line-height: 1.5;
   word-wrap: break-word;
   @media screen and (max-width: 767px) {
-    font-size: 0.75rem;
+    display: none;
   }
 }
