fix: ブログ詳細とお知らせ詳細の見出しの色を修正

--- a/app/public/wp-content/themes/engress/css/single.css
+++ b/app/public/wp-content/themes/engress/css/single.css
@@ -71,12 +71,15 @@
   word-wrap: break-word;
 }
 .bl_blogDetail_content h4 {
+  color: #1B224C;
   word-wrap: break-word;
 }
 .bl_blogDetail_content h5 {
+  color: #1B224C;
   word-wrap: break-word;
 }
 .bl_blogDetail_content h6 {
+  color: #1B224C;
   word-wrap: break-word;
 }
 .bl_blogDetail_content p {
