--- a/app/public/wp-content/themes/engress/css/single.scss
+++ b/app/public/wp-content/themes/engress/css/single.scss
@@ -81,14 +81,17 @@
   }
 
   h4 {
+    color: #1B224C;
     word-wrap: break-word;
   }
 
   h5 {
+    color: #1B224C;
     word-wrap: break-word;
   }
 
   h6 {
+    color: #1B224C;
     word-wrap: break-word;
   }
 
