--- a/app/public/wp-content/themes/engress/css/single-news.css
+++ b/app/public/wp-content/themes/engress/css/single-news.css
@@ -22,6 +22,7 @@
   font-weight: bold;
   font-size: 1.75rem;
   line-height: 1.5;
+  word-wrap: break-word;
 }
 .bl_newsDetail_content h2 {
   margin: 24px 0;
@@ -31,9 +32,24 @@
   font-weight: bold;
   font-size: 1.5rem;
   line-height: 28px;
+  word-wrap: break-word;
 }
 .bl_newsDetail_content h3 {
   margin: 24px 0;
+  color: #1B224C;
+  word-wrap: break-word;
+}
+.bl_newsDetail_content h4 {
+  color: #1B224C;
+  word-wrap: break-word;
+}
+.bl_newsDetail_content h5 {
+  color: #1B224C;
+  word-wrap: break-word;
+}
+.bl_newsDetail_content h6 {
+  color: #1B224C;
+  word-wrap: break-word;
 }
 .bl_newsDetail_content p {
   margin: 24px 0;
@@ -41,6 +57,7 @@
   font-weight: 500;
   font-size: 1rem;
   line-height: 1.5;
+  word-wrap: break-word;
 }
 .bl_newsDetail_content a {
   color: #F5A623;
@@ -48,43 +65,76 @@
   font-size: 1rem;
   line-height: 1.5;
   text-decoration: underline;
+  word-wrap: break-word;
 }
 .bl_newsDetail_content ul {
   margin: 24px 0;
   padding-left: 44px;
 }
-.bl_newsDetail_content ul li {
+.bl_newsDetail_content ul > li {
   position: relative;
   list-style: none;
+  word-wrap: break-word;
 }
-.bl_newsDetail_content ul li::before {
+.bl_newsDetail_content ul > li::before {
   display: inline-block;
   position: absolute;
-  top: 50%;
+  top: 4px;
   left: -32px;
-  transform: translateY(-50%);
   width: 11px;
   height: 11px;
   border-radius: 50%;
   background-color: #F5A623;
   content: '';
 }
-.bl_newsDetail_content figure {
+.bl_newsDetail_content ol {
   margin: 24px 0;
 }
-.bl_newsDetail_content figure img {
+.bl_newsDetail_content figure {
+  max-width: 100%;
+  margin: 24px 0;
+}
+.bl_newsDetail_content figure.alignleft {
+  float: left;
+  margin-right: 20px;
+}
+.bl_newsDetail_content figure.aligncenter {
+  margin: 24px auto;
+}
+.bl_newsDetail_content figure.alignright {
+  float: right;
+  margin-left: 20px;
+}
+.bl_newsDetail_content figcaption {
+  font-size: 85%;
+  color: #949494;
+  text-align: center;
+  font-style: italic;
+}
+.bl_newsDetail_content img {
   width: auto;
+  max-width: 100%;
   height: auto;
+}
+.bl_newsDetail_content img.alignleft {
+  float: left;
+  margin-right: 20px;
+}
+.bl_newsDetail_content img.alignright {
+  float: right;
+  margin-left: 20px;
 }
 .bl_newsDetail_content blockquote {
   position: relative;
   margin: 24px 0;
   padding: 28px 28px 16px 72px;
   background-color: #F8F8F8;
+  word-wrap: break-word;
 }
 .bl_newsDetail_content blockquote cite {
   display: block;
   margin-bottom: 24px;
+  word-wrap: break-word;
 }
 .bl_newsDetail_content blockquote::before {
   position: absolute;
