--- a/app/public/wp-content/themes/engress/css/single-news.scss
+++ b/app/public/wp-content/themes/engress/css/single-news.scss
@@ -25,6 +25,7 @@
     font-weight: bold;
     font-size: 1.75rem;
     line-height: 1.5;
+    word-wrap: break-word;
   }
 
   h2 {
@@ -35,10 +36,28 @@
     font-weight: bold;
     font-size: 1.5rem;
     line-height: 28px;
+    word-wrap: break-word;
   }
 
   h3 {
     margin: 24px 0;
+    color: #1B224C;
+    word-wrap: break-word;
+  }
+
+  h4 {
+    color: #1B224C;
+    word-wrap: break-word;
+  }
+
+  h5 {
+    color: #1B224C;
+    word-wrap: break-word;
+  }
+
+  h6 {
+    color: #1B224C;
+    word-wrap: break-word;
   }
 
   p {
@@ -47,6 +66,7 @@
     font-weight: 500;
     font-size: 1rem;
     line-height: 1.5;
+    word-wrap: break-word;
   }
 
   a {
@@ -55,20 +75,21 @@
     font-size: 1rem;
     line-height: 1.5;
     text-decoration: underline;
+    word-wrap: break-word;
   }
 
   ul {
     margin: 24px 0;
     padding-left: 44px;
-    li {
+    > li {
       position: relative;
       list-style: none;
+      word-wrap: break-word;
       &::before {
         display:  inline-block;
         position: absolute;
-        top: 50%;
+        top: 4px;
         left: -32px;
-        transform: translateY(-50%);
         width:  11px;
         height:  11px;
         border-radius: 50%;
@@ -78,11 +99,44 @@
     }
   }
 
-  figure {
+  ol {
     margin: 24px 0;
-    img {
-      width: auto;
-      height: auto;
+  }
+
+  figure {
+    max-width: 100%;
+    margin: 24px 0;
+    &.alignleft {
+      float: left;
+      margin-right: 20px;
+    }
+    &.aligncenter {
+      margin: 24px auto;
+    }
+    &.alignright {
+      float: right;
+      margin-left: 20px;
+    }
+  }
+
+  figcaption {
+    font-size: 85%;
+    color: #949494;
+    text-align: center;
+    font-style: italic;
+  }
+
+  img {
+    width: auto;
+    max-width: 100%;
+    height: auto;
+    &.alignleft {
+      float: left;
+      margin-right: 20px;
+    }
+    &.alignright {
+      float: right;
+      margin-left: 20px;
     }
   }
 
@@ -91,9 +145,11 @@
     margin: 24px 0;
     padding: 28px 28px 16px 72px;
     background-color: #F8F8F8;
+    word-wrap: break-word;
     cite {
       display: block;
       margin-bottom: 24px;
+      word-wrap: break-word;
     }
     &::before {
       position: absolute;
